[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solus-sdk"
version = "0.1.0"
description = "Python SDK for Solus Protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = ["xrpl-py", "cryptography"]
