[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s4-ledger-sdk"
version = "0.1.0"
description = "Python SDK for S4 Ledger — immutable logistics verification on XRPL"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = ["xrpl-py", "cryptography"]
