[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s4-ledger-sdk"
version = "5.2.0"
description = "S4 Ledger — Immutable defense logistics verification SDK. Anchor, verify, and track records on the XRP Ledger."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "S4 Ledger", email = "dev@s4ledger.com"}
]
keywords = ["defense", "logistics", "xrpl", "blockchain", "ils", "supply-chain", "verification", "military"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "xrpl-py>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
supabase = [
    "supabase>=2.0.0",
]

[project.urls]
Homepage = "https://s4ledger.com"
Documentation = "https://s4ledger.com/sdk"
Repository = "https://github.com/s4ledger/s4-ledger"
"Bug Tracker" = "https://github.com/s4ledger/s4-ledger/issues"

[project.scripts]
s4-anchor = "s4_sdk:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["s4_sdk*"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
